# grok-build-bridge

./: .dockerignore  .env.example  .gitignore  AUDIT-REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MERGE_PLAN.md  README.md  ROADMAP.md  SUPPORT.md  docker-compose.yml  policy.py  pyproject.toml  release_notes_v0.1.0.md  requirements.txt  templates
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: charts.py  scoring.py
bridge_live/: Dockerfile  README.md  __init__.py  app.py  inspector.py  store.py
docs/: RELEASING.md  build-bridge.md  changelog.md  index.html  index.md  (+4 more)
orchestra/: .env.example  Dockerfile  README.md  SECURITY.md  docker-compose.dev.yml  mkdocs.yml  pyproject.toml
orchestra/.github/: FUNDING.yml
orchestra/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  template_proposal.yml
orchestra/.github/assets/: HERO-PLACEHOLDER.md
orchestra/.github/workflows/: ci.yml  frontend.yml  publish.yml  vscode-extension.yml
orchestra/benchmarks/: README.md  __init__.py  goals.yaml  harness.py  judge.py  methodology.md  render_report.py
orchestra/benchmarks/results/: latest.md
orchestra/benchmarks/runners/: __init__.py  orchestra.py
orchestra/docs/: getting-started.md  marketplace-v2.md  observability.md  playground.md
orchestra/docs/architecture/: comparison.md  overview.md
orchestra/docs/blog/: 2026-04-orchestra-vs-gpt-researcher.md
orchestra/docs/community/: launch-posts.md
orchestra/docs/concepts/: debate-loop.md  dynamic-spawn.md  four-roles.md  lucas-veto.md
orchestra/docs/contributing/: index.md  releasing.md
orchestra/docs/deploy/: docker.md  fly.md  render.md  vercel.md
orchestra/docs/getting-started/: quickstart.md
orchestra/docs/guides/: local-docs.md  tracing.md  web-search.md
orchestra/docs/integrations/: build-bridge.md  claude-skill.md
orchestra/docs/reference/: events.md
orchestra/examples/: combined-trendseeker.yaml  debate-loop.yaml  dynamic-spawn.yaml  native-hello.yaml
orchestra/examples/local-only/: local-research.yaml
orchestra/examples/mcp-github/: spec.yaml
orchestra/extensions/vscode/: .eslintrc.json  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
orchestra/extensions/vscode/media/: README.md
orchestra/extensions/vscode/snippets/: orchestra.code-snippets
orchestra/extensions/vscode/src/client/: localClient.ts  remoteClient.ts
orchestra/extensions/vscode/src/commands/: runOrchestra.ts
orchestra/extensions/vscode/src/views/: recentRunsTree.ts  templatesTree.ts
orchestra/extensions/vscode/src/webview/: DebatePanel.ts
orchestra/extensions/vscode/src/webview/ui/: DebateLanes.tsx  FinalReport.tsx  LucasPanel.tsx
orchestra/frontend/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
orchestra/frontend/__tests__/: api-client.test.ts  use-run-stream.test.ts  use-stream-model.test.ts
orchestra/frontend/app/: error.tsx  layout.tsx
orchestra/frontend/app/login/: page.tsx
orchestra/frontend/app/runs/[runId]/: page.tsx
orchestra/frontend/app/settings/: page.tsx
orchestra/frontend/app/templates/: page.tsx
orchestra/frontend/components/: final-output-panel.tsx  header.tsx  login-form.tsx  recent-runs.tsx  role-avatar.tsx  role-lane.tsx  role-message.tsx  role-tool-call.tsx  run-detail-view.tsx  run-header.tsx  run-trigger.tsx  settings-form.tsx  skeleton-lanes.tsx  template-browser.tsx
orchestra/frontend/components/ui/: button.tsx  card.tsx  separator.tsx  skeleton.tsx  tabs.tsx  tooltip.tsx
orchestra/frontend/lib/: selection-store.ts  settings.ts  use-run-stream.ts  utils.ts
orchestra/grok_orchestra/: __init__.py  _banner.py  _roles.py  dispatcher.py  images_runner.py  parser.py  patterns.py  runtime_native.py  runtime_simulated.py  streaming.py
orchestra/grok_orchestra/images/: factory.py  flux_provider.py  policy.py
orchestra/grok_orchestra/llm/: __init__.py  registry.py  types.py
orchestra/grok_orchestra/publisher/: __init__.py  _docx.py
orchestra/grok_orchestra/publisher/templates/: default_report.md.j2
orchestra/grok_orchestra/sources/: _mcp_backend.py  cache.py  mcp_source.py  simulated.py  web.py
orchestra/grok_orchestra/sources/providers/: tavily.py
orchestra/grok_orchestra/templates/: combined-coder-critic.yaml  combined-trendseeker.yaml  competitive-analysis.yaml  deep-research-hierarchical.yaml  due-diligence-investor-memo.yaml  orchestra-debate-loop-policy.yaml  orchestra-dynamic-spawn-trend-analyzer.yaml  orchestra-hierarchical-research.yaml  orchestra-native-16.yaml  orchestra-native-4.yaml  orchestra-recovery-resilient.yaml  weekly-news-digest.yaml
orchestra/grok_orchestra/tracing/: otel_tracer.py  scrubber.py
orchestra/grok_orchestra/web/: auth.py  main.py
orchestra/grok_orchestra/web/templates/: index.html
orchestra/grok_orchestra/workflows/deep_research/: workflow.py
orchestra/launch/: x-thread-orchestra.md
orchestra/scripts/: docker-smoke-test.ps1  docker-smoke-test.sh
orchestra/skills/agent-orchestra/: SKILL.md
orchestra/skills/agent-orchestra/scripts/: run_orchestration.py
orchestra/skills/agent-orchestra/templates/: INDEX.json
orchestra/tests/: conftest.py  test_benchmark_judge.py  test_cli_orchestra.py  test_combined_integration.py  test_doctor.py  test_grok_native_preserved.py  test_image_cache.py  test_image_policy.py  test_integration_orchestra.py  test_mixed_mode.py  test_parser_orchestra.py  test_patterns.py  test_planner_resume.py  test_publisher.py  test_publisher_with_images.py  test_robots.py  test_runtime_native.py  test_runtime_simulated.py  test_safety_veto.py  test_simulated_run.py  test_skill_choose_template.py  test_tavily_provider.py  test_templates.py  test_tracing_noop.py  test_web_auth.py  test_web_endpoints.py
orchestra/tools/bridge-stub/: README.md
orchestra/tools/bridge-stub/grok_build_bridge/: __init__.py  deploy.py  safety.py  xai_client.py
orchestra/vscode/schemas/: orchestra.schema.json
tools/bridge-stub/: pyproject.toml
tools/bridge-stub/grok_build_bridge/: _console.py  builder.py  parser.py
(+220 files in other folders)
