[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "grok-build-bridge"
version = "0.1.0"
description = "Production-ready X agents from Grok 4.20 — two-layer safety audit (static + LLM), xai-sdk integration, multi-target deploy (X / Vercel / Render / local), scheduling, dry-run, templates, VS Code IntelliSense, Orchestra-ready."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Jan Solo", email = "jan@agentmind.cloud" }]
maintainers = [{ name = "AgentMindCloud" }]
keywords = ["grok", "xai", "x", "twitter", "agent", "bridge", "deployment", "safety", "yaml", "x-twitter", "automation", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "xai-sdk>=1.0",
    "pyyaml>=6",
    "rich>=13",
    "typer>=0.12",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.6",
    "build>=1.2",
    "types-PyYAML",
    "types-jsonschema",
    # Pulled into ``dev`` so the test suite for ``bridge_live`` runs on every
    # CI invocation without an extra install step.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]
live = [
    # Runtime deps for the ``bridge.live`` Inspector + Showcase service.
    # Kept separate from the core CLI deps so plain ``pip install
    # grok-build-bridge`` stays small for CLI-only users.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/AgentMindCloud/grok-build-bridge"
Repository = "https://github.com/AgentMindCloud/grok-build-bridge"
Issues = "https://github.com/AgentMindCloud/grok-build-bridge/issues"
Ecosystem = "https://github.com/AgentMindCloud/grok-install-ecosystem"

[project.scripts]
grok-build-bridge = "grok_build_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["grok_build_bridge"]
# ``templates/`` and ``schema/`` live under the package directory, so
# hatchling picks them up via ``packages`` above. No ``force-include``
# needed — adding one would create duplicate entries in the wheel.

[tool.hatch.build.targets.sdist]
include = [
    "grok_build_bridge",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"grok_build_bridge/cli.py" = ["B008"]
"grok_build_bridge/_banner.py" = ["E501", "RUF001"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# Typer stores runtime metadata in ``Option`` / ``Argument`` defaults that
# mypy cannot type-check; allow those boundaries rather than littering the
# CLI with per-line ignores.
[[tool.mypy.overrides]]
module = "grok_build_bridge.cli"
disallow_untyped_decorators = false
disallow_any_decorated = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Make the repo root importable so ``from tests.conftest import ...`` works
# regardless of how pip/hatchling laid the editable install out on disk.
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.coverage.run]
source = ["grok_build_bridge"]
branch = true
omit = [
    "grok_build_bridge/_banner.py",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 1
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
